--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Hello World</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700|Raleway:500,700" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
